[tool.poetry]
name = "seeact"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
backoff = "2.2.1"
inquirerpy = "0.3.4"
lxml = "4.9.3"
openai = "1.24.0"
playwright = "1.40.0"
jsonlines = "^4.0.0"
numpy = "^1.26.4"
sentence-transformers = "^2.7.0"
torch = "^2.3.0"
protobuf = "^4.25.5"
beautifulsoup4 = "^4.12.3"
toml = "^0.10.2"
aioconsole = "^0.7.0"
litellm = "1.35.32"
google-generativeai = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
